--- a/css/main.css
+++ b/css/main.css
@@ -47,15 +47,18 @@ section {
   text-align: center;
 }
 
-.footer-pictures {
-  position: fixed;
-  bottom: 0;
+.footer-container {
+  position: absolute;
   text-align: center;
+  bottom: 0;
 }
 
-.footer-pictures img {
+.footer-container img {
+  display: inline-block;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 10%;
-  left: 50%;
-  padding: 1em 2em;
+  padding: 2% 10%;
 }
 /*# sourceMappingURL=main.css.map */
