--- a/css/main.scss
+++ b/css/main.scss
@@ -42,13 +42,15 @@ section {
   text-align: center;
 }
 
-.footer-pictures {
-    position: fixed;
-    bottom: 0;
+.footer-container {
+    position: absolute;
     text-align: center;
-  img {
+    bottom: 0;
+  img{
+    display: inline-block;
+    justify-content: space-between;
     width: 10%;
-    left: 50%;
-    padding: 1em 2em;
+    padding: 2% 10%;
   }
 }
+
