--- a/css/main.css
+++ b/css/main.css
@@ -61,4 +61,41 @@ section {
   width: 10%;
   padding: 2% 10%;
 }
+
+nav ul {
+  position: fixed;
+  width: 60%;
+  top: 0;
+  right: 0;
+  text-align: left;
+  background: #1a1a1a;
+  height: 100%;
+  z-index: 7;
+  padding-top: 3em;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  padding: 1em 2em;
+  background-color: #222222;
+}
+
+nav ul li a:hover {
+  background-color: #2c2b2b;
+}
+
+.exit-btn {
+  margin-bottom: 1em;
+  margin-top: -1.3em;
+  text-align: right;
+  padding: 0 1.4em;
+}
+
+.exit-btn img {
+  width: 15px;
+  cursor: pointer;
+}
 /*# sourceMappingURL=main.css.map */
