--- a/css/main.scss
+++ b/css/main.scss
@@ -27,8 +27,8 @@ header {
   justify-content: space-between;
 }
 
-.hide-mobile {
-  display: none;
+.hide-mobile{
+    display: none;
 }
 
 .menu {
@@ -54,3 +54,39 @@ section {
   }
 }
 
+nav ul {
+    position: fixed;
+    width: 60%;
+    top: 0;
+    right: 0;
+    text-align: left;
+    background: rgb(26, 26, 26);
+    height: 100%;
+    z-index: 7;
+    padding-top: 3em;
+}
+
+nav ul li a{
+    color: white;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    padding: 1em 2em;
+    background-color: rgb(34, 34, 34);
+}
+
+nav ul li a:hover{
+    background-color: rgb(44, 43, 43);
+}
+
+.exit-btn{
+    margin-bottom: 1em;
+    margin-top: -1.3em;
+    text-align: right;
+    padding: 0 1.4em;
+
+    img{
+        width: 15px;
+        cursor: pointer;
+    }
+}
