--- a/css/main.scss
+++ b/css/main.scss
@@ -38,7 +38,7 @@ header {
 
 section{
   text-align: center;
-  padding-top: 250px;
+  padding-top: 45%;
 
   h1,p {
     text-align: center;
@@ -47,13 +47,11 @@ section{
   }
 
 }
-
-
-
 .footer-container {
   position: absolute;
   text-align: center;
   bottom: 0;
+
   img {
     display: inline-block;
     justify-content: space-between;
