--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ section p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 5%;
+  width: 8%;
   padding: 2% 10%;
 }
 
@@ -110,51 +110,65 @@ nav ul li a:hover {
     padding-top: 35%;
   }
   .footer-container img {
-    width: 8%;
+    width: 7%;
   }
 }
 
-@media only screen and (min-width: 950px) {
+@media only screen and (min-width: 850px) {
+  .nav-container {
+    color: red;
+    margin: 0;
+    padding: 0;
+  }
+  .home {
+    padding: .5em;
+    font-size: 30px;
+  }
+  .show-desktop {
+    display: block;
+    margin: 0 auto 13% auto;
+  }
   .hide-desktop {
     display: none;
   }
-  .nav-container {
-    color: red;
-  }
   nav ul {
-    text-align: center;
-    position: fixed;
-    width: 60%;
-    margin: 0;
-    padding: 0;
+    position: initial;
+    width: auto;
     background: none;
-  }
-  .show-desktop {
+    height: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    padding-top: 0;
   }
-  .show-desktop li, .show-desktop a {
-    background: none;
-    text-align: center;
-    padding-top: 13px;
-    padding-right: 5%;
+  nav ul li {
+    float: left;
   }
-  .show-desktop li, .show-desktop a:hover {
-    background: none;
+  nav ul li a {
+    color: white;
+    text-align: left;
+    background-color: inherit;
+    padding: 1.5em 2em;
+  }
+  nav ul li a:hover {
+    background-color: inherit;
   }
   section {
     padding: 20%;
   }
-  section h1, section p {
+  section h1,
+  section p {
     font-size: 40px;
   }
   .footer-container img {
-    width: 7%;
+    width: 6%;
     padding: 1em 12%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .home {
+    font-size: 40px;
   }
 }
 /*# sourceMappingURL=main.css.map */
