--- a/css/main.css
+++ b/css/main.css
@@ -206,25 +206,27 @@ nav ul li a:hover {
             justify-content: space-between;
   }
   .footer-container {
-    position: initial;
-    height: auto;
-    width: auto;
-    margin-bottom: 10%;
-  }
-  .footer-pictures {
-    padding: 0;
-    position: inherit;
-    height: auto;
-    width: auto;
-    bottom: 0;
-  }
-  .footer-pictures li {
     margin: 0;
     padding: 0;
+    height: 100%;
+    position: absolute;
+  }
+  .footer-pictures {
+    margin: 30;
+    padding: 0;
+    position: initial;
+    height: 100%;
+    width: 100%;
+  }
+  .footer-pictures li {
+    position: initial;
+    margin-left: 195%;
+    width: 100%;
   }
   .footer-pictures img {
     margin: 0;
-    padding: 0;
+    padding: 1em 2em;
+    width: 3em;
   }
 }
 /*# sourceMappingURL=main.css.map */
