--- a/css/main.scss
+++ b/css/main.scss
@@ -2,7 +2,7 @@
 
 html {
   height: 100%;
-  background: linear-gradient(to top, #090e4e, #43003e 30em, #090e4e);
+  background: linear-gradient(to top,  #43003e, #090e4e 35em, #43003e);
 }
 
 body {
@@ -23,6 +23,8 @@ ul {
 
 header {
   display: flex;
+  height: auto;
+  width: auto;
   justify-content: space-between;
 }
 
@@ -31,9 +33,9 @@ header {
 }
 
 .home {
-  font-size: 20px;
-  text-decoration: none;
-  color: white;
+  img {
+    width: 90px;
+  }
 }
 
 .menu {
@@ -50,6 +52,7 @@ section {
     text-align: center;
     color: white;
     font-size: 25px;
+    
   }
 }
 .footer-container {
@@ -83,6 +86,7 @@ nav ul li a {
   width: 100%;
   padding: 1em 2em;
   background-color: rgb(34, 34, 34);
+  
 }
 
 nav ul li a:hover {
@@ -152,6 +156,7 @@ nav ul li a:hover {
     background-color: inherit;
     padding: 1.5em 2em;
     font-size: 15px;
+    border-radius: 25px;
   }
 
   nav ul li a:hover {
@@ -211,33 +216,9 @@ nav ul li a:hover {
     display: flex;
     padding: 1em;
     justify-content: space-between;
+    border-radius: 25px;
   }
 
-  .footer-container {
-   margin: 0;
-   padding: 0;
-   height: 100%;
-   position: absolute;
-  }
-
-  .footer-pictures{
-    margin: 30;
-    padding: 0;
-    position: initial;
-    height: 100%;
-    width: 100%;
   
-
-    li {
-      position: initial;
-      margin-left: 195%;
-      width: 100%;
-    }
-    img {
-      margin: 0;
-      padding: 1em 2em;
-      width: 3em;
-    }
-  }
 
 }
