--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap");
 html {
   height: 100%;
-  background: -webkit-gradient(linear, left bottom, left top, from(#090e4e), color-stop(30em, #43003e), to(#090e4e));
-  background: linear-gradient(to top, #090e4e, #43003e 30em, #090e4e);
+  background: -webkit-gradient(linear, left bottom, left top, from(#43003e), color-stop(35em, #090e4e), to(#43003e));
+  background: linear-gradient(to top, #43003e, #090e4e 35em, #43003e);
 }
 
 body {
@@ -25,6 +25,8 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: auto;
+  width: auto;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -34,10 +36,8 @@ header {
   display: none;
 }
 
-.home {
-  font-size: 20px;
-  text-decoration: none;
-  color: white;
+.home img {
+  width: 90px;
 }
 
 .menu {
@@ -154,6 +154,7 @@ nav ul li a:hover {
     background-color: inherit;
     padding: 1.5em 2em;
     font-size: 15px;
+    border-radius: 25px;
   }
   nav ul li a:hover {
     background-color: inherit;
@@ -204,29 +205,7 @@ nav ul li a:hover {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-  }
-  .footer-container {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    position: absolute;
-  }
-  .footer-pictures {
-    margin: 30;
-    padding: 0;
-    position: initial;
-    height: 100%;
-    width: 100%;
-  }
-  .footer-pictures li {
-    position: initial;
-    margin-left: 195%;
-    width: 100%;
-  }
-  .footer-pictures img {
-    margin: 0;
-    padding: 1em 2em;
-    width: 3em;
+    border-radius: 25px;
   }
 }
 /*# sourceMappingURL=main.css.map */
