--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap");
 html {
   height: 100%;
+  width: auto;
   background: -webkit-gradient(linear, left bottom, left top, from(#43003e), color-stop(35em, #090e4e), to(#43003e));
   background: linear-gradient(to top, #43003e, #090e4e 35em, #43003e);
 }
 
 body {
   margin: 0;
+  width: auto;
+  height: auto;
   font-family: "Quicksand", Arial;
 }
 
@@ -16,17 +19,22 @@ ul {
   padding: 0;
 }
 
-.nav-container {
-  text-align: center;
-  padding: 1em;
+.container {
+  position: fixed;
+  width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
 }
 
-header {
+.nav-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   height: auto;
   width: auto;
+  text-align: center;
+  padding: 1em;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -45,31 +53,37 @@ header {
   margin-top: 25%;
 }
 
-section {
+.main-container {
+  position: fixed;
   text-align: center;
-  padding-top: 50%;
+  height: 100%;
+  width: auto;
+  top: 40%;
+  left: 30%;
 }
 
-section h1,
-section p {
+.main-container h1, .main-container p {
+  position: initial;
   text-align: center;
   color: white;
   font-size: 25px;
 }
 
 .footer-container {
-  position: absolute;
+  position: fixed;
   text-align: center;
   bottom: 0;
 }
 
-.footer-container img {
-  display: inline-block;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 8%;
-  padding: 2% 10%;
+.footer-pictures {
+  position: initial;
+}
+
+.footer-pictures img {
+  top: 100%;
+  position: relative;
+  width: 10%;
+  padding: .5em 3em;
 }
 
 nav ul {
