--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,13 @@
   }
   /* end header section*/
 
+  /* hero*/
+ 
+  
+  /* Add a background color and some padding around the form */
+
+  /* end hero*/
+
   /* footer */
 
 #footer {
