--- a/css/main2.css
+++ b/css/main2.css
@@ -92,6 +92,7 @@ a {
 
 #header .nav-list ul a:hover {
   color: crimson;
+  font-size: 1.5rem;
 }
 
 #header .hamburger {
@@ -276,6 +277,10 @@ a {
 
     #header .nav-list ul li a {
         font-size: 1rem;
+    }
+    #header .nav-list ul a:hover {
+      color: crimson;
+      font-size: 1rem;
     }
 }
 
